# data-extraction

./: .env  .gitignore  .pyiceberg.yaml  README.md  Untitled-1.py  check.py  data_analysis.py  data_anlaysis.ipynb  data_extraction.py  database.py  demo.sql  docker-compose-f1.yml  docker-compose.hive.yaml  docker-compose.yaml  docker-compose.yml  dockerfile  hdfs-docker-compose.yaml  he.sql  hello.py  hive-metastore-init.sh  iceberg_table_schema.py  main.ipynb  main.py  prometheus.yml  pyiceberg.yaml  pyproject.toml  requirements.txt  start_scrapping_prometheus.py  update_metadata_schema.sql
PYICEBERG_HOME/: .pyiceberg.yaml
celery_app/: INSERT INTO Drivers (app_no, type, app_d.sql  celery_config.py  incremental.py  tasks.py  un.sql
config/: yarn-site.xml
hadoop-config/: hdfs-site.xml  mapred-site.xml  yarn-site.xml
hdfs/datanode/current/: VERSION
hdfs/namenode/current/: VERSION  edits_0000000000000000002-0000000000000000019  edits_0000000000000000020-0000000000000000023  edits_0000000000000000024-0000000000000000029  edits_0000000000000000030-0000000000000000050  edits_0000000000000000051-0000000000000000082  edits_0000000000000000083-0000000000000000085  edits_inprogress_0000000000000000086  fsimage_0000000000000000082  fsimage_0000000000000000082.md5  fsimage_0000000000000000085  fsimage_0000000000000000085.md5
hive-site/: hive-site.xml
metastore-postgresql/postgresql/data/: postmaster.pid
metastore-postgresql/postgresql/data/global/: pg_control  (+1 more)
proj/: celery_app.py  tasks.py
timestamp-based/: main.py
timestamp_based/: __init__.py  main.py
(+36 files in other folders)
